{
  "version": 4,
  "terraform_version": "1.7.4",
  "serial": 305,
  "lineage": "071ffe91-d9d0-3657-9c31-cf39a6ec7fa8",
  "resources": [
    {
      "module": "module.instance_launch",
      "mode": "managed",
      "type": "aws_instance",
      "name": "haProxy_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0e6b0a1f7f29fa192",
            "arn": "arn:aws:ec2:us-east-1:378331682224:instance/i-05aed3793e2ca4bae",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-05aed3793e2ca4bae",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "ha_key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0afc69908aaec7e92",
            "private_dns": "ip-10-0-1-153.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.153",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-003b0e4a1f6f309f0",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-0540f04da4d97f738"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0a911acd23cf0270c",
            "tags": {
              "Environment": "Haproxy",
              "Name": "haproxy-1"
            },
            "tags_all": {
              "Environment": "Haproxy",
              "Name": "haproxy-1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0540f04da4d97f738"
            ]
          },
          "dependencies": [
            "module.ami_image.data.aws_ami.images",
            "module.sec_groups.aws_security_group.ha_security_group",
            "module.subnet.aws_subnet.private_subnets"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0e6b0a1f7f29fa192",
            "arn": "arn:aws:ec2:us-east-1:378331682224:instance/i-0a09e60996de43d4f",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0a09e60996de43d4f",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "ha_key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0dfc0c8d052e4f581",
            "private_dns": "ip-10-0-1-243.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.243",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0a943712873b9a4eb",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-0540f04da4d97f738"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0ce86f26a5845d49d",
            "tags": {
              "Environment": "Haproxy",
              "Name": "haproxy-2"
            },
            "tags_all": {
              "Environment": "Haproxy",
              "Name": "haproxy-2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0540f04da4d97f738"
            ]
          },
          "dependencies": [
            "module.ami_image.data.aws_ami.images",
            "module.sec_groups.aws_security_group.ha_security_group",
            "module.subnet.aws_subnet.private_subnets"
          ]
        }
      ]
    },
    {
      "module": "module.instance_launch",
      "mode": "managed",
      "type": "aws_instance",
      "name": "public_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0e6b0a1f7f29fa192",
            "arn": "arn:aws:ec2:us-east-1:378331682224:instance/i-0077337c1dc00ffd1",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0077337c1dc00ffd1",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "ha_key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0a93e7107af602c50",
            "private_dns": "ip-10-0-1-80.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.80",
            "public_ip": "34.239.109.88",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-042a01380d2f22a4d",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-0fdbef9bd23e89094"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-001374406fa7b86c3",
            "tags": {
              "Name": "bashian-host"
            },
            "tags_all": {
              "Name": "bashian-host"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0fdbef9bd23e89094"
            ]
          },
          "dependencies": [
            "module.ami_image.data.aws_ami.images",
            "module.sec_groups.aws_security_group.bastion_security_group",
            "module.subnet.aws_subnet.public_subnets"
          ]
        }
      ]
    },
    {
      "module": "module.instance_launch",
      "mode": "managed",
      "type": "aws_instance",
      "name": "webserver_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0e6b0a1f7f29fa192",
            "arn": "arn:aws:ec2:us-east-1:378331682224:instance/i-0d8bca3b0a404d8b1",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0d8bca3b0a404d8b1",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "ha_key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0ab9900a9a9429386",
            "private_dns": "ip-10-0-1-187.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.187",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0056ed4ddba04e48d",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-056ddba920f9f4a1c"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0a911acd23cf0270c",
            "tags": {
              "Environment": "Webserver",
              "Name": "web-1"
            },
            "tags_all": {
              "Environment": "Webserver",
              "Name": "web-1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-056ddba920f9f4a1c"
            ]
          },
          "dependencies": [
            "module.ami_image.data.aws_ami.images",
            "module.sec_groups.aws_security_group.web_security_group",
            "module.subnet.aws_subnet.private_subnets"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0e6b0a1f7f29fa192",
            "arn": "arn:aws:ec2:us-east-1:378331682224:instance/i-05be6ef32cbb649e6",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-05be6ef32cbb649e6",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "ha_key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0c06e326f73a7ade3",
            "private_dns": "ip-10-0-1-220.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.220",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-06b658635f93edd9b",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-056ddba920f9f4a1c"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0ce86f26a5845d49d",
            "tags": {
              "Environment": "Webserver",
              "Name": "web-2"
            },
            "tags_all": {
              "Environment": "Webserver",
              "Name": "web-2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-056ddba920f9f4a1c"
            ]
          },
          "dependencies": [
            "module.ami_image.data.aws_ami.images",
            "module.sec_groups.aws_security_group.web_security_group",
            "module.subnet.aws_subnet.private_subnets"
          ]
        }
      ]
    },
    {
      "module": "module.load_balancer",
      "mode": "managed",
      "type": "aws_lb",
      "name": "my_load_balancer",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:378331682224:loadbalancer/app/ha-lb/29748f7fb53a6040",
            "arn_suffix": "app/ha-lb/29748f7fb53a6040",
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "ha-lb-449933725.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:378331682224:loadbalancer/app/ha-lb/29748f7fb53a6040",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "ha-lb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-056ddba920f9f4a1c"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0a911acd23cf0270c"
              },
              {
                "subnet_id": "subnet-0ce86f26a5845d49d"
              }
            ],
            "subnets": [
              "subnet-0a911acd23cf0270c",
              "subnet-0ce86f26a5845d49d"
            ],
            "vpc_id": "vpc-0f71264ff3b6d914d",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "module.sec_groups.aws_security_group.web_security_group",
            "module.subnet.aws_subnet.private_subnets"
          ]
        }
      ]
    },
    {
      "module": "module.load_balancer",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "my_listener_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:378331682224:listener/app/ha-lb/29748f7fb53a6040/2c15fbdf0a729db6",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:378331682224:targetgroup/ha-tg/68d0920462a24828",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:378331682224:listener/app/ha-lb/29748f7fb53a6040/2c15fbdf0a729db6",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:378331682224:loadbalancer/app/ha-lb/29748f7fb53a6040",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.load_balancer.aws_lb.my_load_balancer",
            "module.sec_groups.aws_security_group.web_security_group",
            "module.subnet.aws_subnet.private_subnets",
            "module.target_group.aws_lb_target_group.my_target_group"
          ]
        }
      ]
    },
    {
      "module": "module.load_balancer",
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "my_attachment",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:378331682224:targetgroup/ha-tg/68d0920462a24828-20240226194005384200000008",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:378331682224:targetgroup/ha-tg/68d0920462a24828",
            "target_id": "i-05aed3793e2ca4bae"
          },
          "dependencies": [
            "module.ami_image.data.aws_ami.images",
            "module.instance_launch.aws_instance.haProxy_instance",
            "module.sec_groups.aws_security_group.ha_security_group",
            "module.subnet.aws_subnet.private_subnets",
            "module.target_group.aws_lb_target_group.my_target_group"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:378331682224:targetgroup/ha-tg/68d0920462a24828-20240226194005499100000009",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:378331682224:targetgroup/ha-tg/68d0920462a24828",
            "target_id": "i-0a09e60996de43d4f"
          },
          "dependencies": [
            "module.ami_image.data.aws_ami.images",
            "module.instance_launch.aws_instance.haProxy_instance",
            "module.sec_groups.aws_security_group.ha_security_group",
            "module.subnet.aws_subnet.private_subnets",
            "module.target_group.aws_lb_target_group.my_target_group"
          ]
        }
      ]
    },
    {
      "module": "module.nat",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-05e9d7259047de5b1",
            "domain": "vpc",
            "id": "eipalloc-05e9d7259047de5b1",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-54-164-186-108.compute-1.amazonaws.com",
            "public_ip": "54.164.186.108",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.nat",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "mynat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-05e9d7259047de5b1",
            "association_id": "eipassoc-027833231a36aba75",
            "connectivity_type": "public",
            "id": "nat-0ac6188f8b31bd2d6",
            "network_interface_id": "eni-0b736508f79672e20",
            "private_ip": "10.0.1.120",
            "public_ip": "54.164.186.108",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-001374406fa7b86c3",
            "tags": {
              "Name": "ha-nat"
            },
            "tags_all": {
              "Name": "ha-nat"
            }
          },
          "dependencies": [
            "module.nat.aws_eip.nat_eip",
            "module.subnet.aws_subnet.public_subnets"
          ]
        }
      ]
    },
    {
      "module": "module.route_table",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:378331682224:route-table/rtb-0b610a22fdfa1ef8d",
            "id": "rtb-0b610a22fdfa1ef8d",
            "owner_id": "378331682224",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-0ac6188f8b31bd2d6",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "ha-private-route"
            },
            "tags_all": {
              "Name": "ha-private-route"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f71264ff3b6d914d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.nat.aws_eip.nat_eip",
            "module.nat.aws_nat_gateway.mynat",
            "module.subnet.aws_subnet.public_subnets"
          ]
        }
      ]
    },
    {
      "module": "module.route_table",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:378331682224:route-table/rtb-0de432dc92dff4efb",
            "id": "rtb-0de432dc92dff4efb",
            "owner_id": "378331682224",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-007bfdcfaa1416337",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "ha-public-route"
            },
            "tags_all": {
              "Name": "ha-public-route"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f71264ff3b6d914d"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "module": "module.route_table",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_subnet_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0fd4e46756fbfc15f",
            "route_table_id": "rtb-0b610a22fdfa1ef8d",
            "subnet_id": "subnet-0a911acd23cf0270c"
          },
          "dependencies": [
            "module.nat.aws_eip.nat_eip",
            "module.nat.aws_nat_gateway.mynat",
            "module.route_table.aws_route_table.private_route_table",
            "module.subnet.aws_subnet.private_subnets",
            "module.subnet.aws_subnet.public_subnets"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0327fda4354aba394",
            "route_table_id": "rtb-0b610a22fdfa1ef8d",
            "subnet_id": "subnet-0ce86f26a5845d49d"
          },
          "dependencies": [
            "module.nat.aws_eip.nat_eip",
            "module.nat.aws_nat_gateway.mynat",
            "module.route_table.aws_route_table.private_route_table",
            "module.subnet.aws_subnet.private_subnets",
            "module.subnet.aws_subnet.public_subnets"
          ]
        }
      ]
    },
    {
      "module": "module.route_table",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_subnet_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d834576b6c12be53",
            "route_table_id": "rtb-0de432dc92dff4efb",
            "subnet_id": "subnet-001374406fa7b86c3"
          },
          "dependencies": [
            "module.route_table.aws_route_table.public_route_table",
            "module.subnet.aws_subnet.public_subnets"
          ]
        }
      ]
    },
    {
      "module": "module.sec_groups",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "bastion_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:378331682224:security-group/sg-0fdbef9bd23e89094",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0fdbef9bd23e89094",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "bastion-sg",
            "name_prefix": "",
            "owner_id": "378331682224",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0f71264ff3b6d914d"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "module": "module.sec_groups",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ha_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:378331682224:security-group/sg-0540f04da4d97f738",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0540f04da4d97f738",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "ha-sg",
            "name_prefix": "",
            "owner_id": "378331682224",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0f71264ff3b6d914d"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "module": "module.sec_groups",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "web_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:378331682224:security-group/sg-056ddba920f9f4a1c",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-056ddba920f9f4a1c",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "webserver-sg",
            "name_prefix": "",
            "owner_id": "378331682224",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0f71264ff3b6d914d"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "module": "module.subnet",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:378331682224:subnet/subnet-0a911acd23cf0270c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.1.128/26",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a911acd23cf0270c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "378331682224",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "ha-pri-sub-1"
            },
            "tags_all": {
              "Name": "ha-pri-sub-1"
            },
            "vpc_id": "vpc-0f71264ff3b6d914d"
          }
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:378331682224:subnet/subnet-0ce86f26a5845d49d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.1.192/26",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ce86f26a5845d49d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "378331682224",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "ha-pri-sub-2"
            },
            "tags_all": {
              "Name": "ha-pri-sub-2"
            },
            "vpc_id": "vpc-0f71264ff3b6d914d"
          }
        }
      ]
    },
    {
      "module": "module.subnet",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:378331682224:subnet/subnet-001374406fa7b86c3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.1.64/26",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-001374406fa7b86c3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "378331682224",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "ha-public-subnet"
            },
            "tags_all": {
              "Name": "ha-public-subnet"
            },
            "vpc_id": "vpc-0f71264ff3b6d914d"
          }
        }
      ]
    },
    {
      "module": "module.target_group",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "my_target_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:378331682224:targetgroup/ha-tg/68d0920462a24828",
            "arn_suffix": "targetgroup/ha-tg/68d0920462a24828",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:378331682224:targetgroup/ha-tg/68d0920462a24828",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "ha-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0f71264ff3b6d914d"
          }
        }
      ]
    }
  ]
}